# animotion

./: README.md  pyproject.toml  setup.py
animotion/: __init__.py  animotion.py  interpolators.py
animotion/animotion.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py
