[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animotion"
version = "0.1.0"
description = "A library to create keyframe-based animations for hardware devices like servos and LEDs"
authors = [{name = "Pena", email = "penadoxo@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["animation", "hardware", "servo", "LED", "keyframe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = []
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["animotion"]
